[package]
name = "cf-hub"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rustls = "0.23.5"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
